examples/slack/ingress-snowball/base/snowball-webclient-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: snowball-webclient-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: snowball-webclient-ip
    networking.gke.io/managed-certificates: snowball-webclient-certificate
  labels:
    app: snowball-webclient
spec:
  backend:
    serviceName: snowball-webclient-service
    servicePort: 80
